--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@supabase/supabase-js": "^2.1.3"
+		"@supabase/supabase-js": "^2.1.3",
+		"dayjs": "^1.11.7"
 	}
 }
